--- a/spring-boot-application1/src/main/resources/application.yml
+++ b/spring-boot-application1/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 10001
+
+spring:
+  cloud:
+    stream:
+      bindings:
+        output:
+          destination: transformed
+        test-sink:
+          destination: transformed
+        input:
+          destination: testtock
+        test-source:
+          destination: testtock
