--- a/sample7/spring-boot-application16/src/main/resources/application.yml
+++ b/sample7/spring-boot-application16/src/main/resources/application.yml
@@ -8,6 +8,5 @@ spring:
       instance-index: 0
       bindings:
         input:
-          destination: topic2
+          destination: partitioned.topic
           group: myGroup
-          content-type: text/plain
